fix broken styles caused by rebase

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,69 +71,41 @@ body {
     color: var(--color-text);
 }
 
-#nav-bar {
-    position: fixed;
-    padding: var(--navbar-padding);
-    top: 0;
-    left: 0;
-    right: 0;
-    height: var(--navbar-height);
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-    background-image: linear-gradient(white, rgba(255, 255, 255, 0.3));
-    border-bottom: 1px solid rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(calc(120 * var(--fpx)));
-    -webkit-backdrop-filter: blur(calc(120 * var(--fpx)));
-
-    z-index: 2;
+#main {
+    margin-top: var(--navbar-height);
 }
 
-#nav-bar .logo {
-    height: calc(var(--navbar-height) - 2 * var(--navbar-padding));
-    box-sizing: border-box;
-}
-
-#nav-bar .btn {
-    border: none;
-}
-
-#nav-bar .btn:not(:hover) {
-    color: #586674;
-}
-
-#nav-bar .dropdown-item:active {
+h1, h2 {
+    font-weight: 800;
     background-color: var(--color-main);
+    background: var(--gradient-blue-green);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-#nav-bar .section {
-    flex-grow: 1;
+h2 {
+    margin-top: 0;
+    margin-bottom: 3rem;
+}
+
+.flex-column-centred {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
 }
 
-#nav-bar .top-left.section {
-    gap: 0.7rem;
-    font-weight: bold;
+.card {
+    padding: 4rem 3rem;
+    border: solid 1px var(--color-main);
+    border-radius: 0;
 }
 
-#nav-bar .centre.section {
-    justify-content: center;
+a {
+    color: var(--color-main);
 }
 
-#nav-bar .top-right.section {
-    justify-content: end;
-}
-
-#nav-bar .powered {
-    display: flex;
-    justify-content: end;
-}
-
-#nav-bar .powered .logo, #nav-bar .account.dropdown .logo {
-    padding: 0.2rem;
+.muted-text {
+    color: var(--color-text);
 }
 
 #dynamic-bg {
@@ -144,8 +116,4 @@ body {
     height: 100%;
     filter: blur(calc(240 * var(--fpx))) saturate(2.1);
     z-index: -1;
-}
-
-#main {
-    margin-top: var(--navbar-height);
 }
